[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tufast_matching_tool"
version = "4.4.4"
dependencies = [
  "networkx",
  "numpy",
  "openpyxl",
  "pandas",
  "scipy",
  "PySide6"
]

[metadata]
name = "tufast_matching_tool"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]